[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for email triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
]

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for email triage"
entrypoint = "main:app"
framework = "fastapi"

[tool.openenv.endpoints]
reset = "POST /reset"
step = "POST /step"
state = "GET /state"